--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -12,9 +12,9 @@ tests_config:
   tests:
     - test_make_deposit_crm  # create live account and make a deposit into a trading account from the crm
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_API
-#  class: CreateNewCustomer
-#  tests:
-#    - test_create_new_lead     # Creates a lead via API and verifying in CRM
-#    - test_create_new_customer
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_API
+  class: CreateNewCustomer
+  tests:
+    - test_create_new_lead     # Creates a lead via API and verifying in CRM
+    - test_create_new_customer
 
