--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -22,6 +22,7 @@ ClientsPage:
   id_client: "//a[contains(text(), 'ACC')]"
   country: "//*[@id='customAdvanceSearch']/td[6]/div/div[1]/button"
   country_input: "//*[@id='customAdvanceSearch']/td[6]/div/div[1]/ul/li[1]/div/input"
+  mass_assign_btn: "//input[@value='Mass Assign']"
 LeadDetailViewInfo:
     referral: "//td[contains(text(),'Referral')]//following-sibling::td[1]"
 TasksPage:
