--- a/src/main/python/ui/crm/model/BrandsXpath/forex_staging_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/forex_staging_xpath.yml
@@ -1,3 +1,4 @@
 ClientsPage:
   country: "//*[@id='customAdvanceSearch']/td[5]/div/div[1]/button"
   country_input: "//*[@id='customAdvanceSearch']/td[5]/div/div[1]/ul/li[1]/div/input"
+  mass_assign_btn: "//input[@value='Mass Assign']"
