--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -3,8 +3,8 @@ brands:
 #- name: brokerz
 #  config_file: brokerz.yml
 
-- name: 4xfx
-  config_file: 4xfx.yml
+#- name: 4xfx
+#  config_file: 4xfx.yml
 #
 #- name: ptbanc
 #  config_file: ptbanc.yml
@@ -18,5 +18,5 @@ brands:
 #- name: newforexstage2
 #  config_file: newforexstage2.yml
 
-#- name: coin-bits
-#  config_file: coin-bits.yml
+- name: trade99
+  config_file: trade99.yml
