--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -1,13 +1,13 @@
 tests_config:
 
 ###################################### MY DASHBOARD TESTS ########################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
-#  class: MyDashboardActionsTest
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_my_dashboard_module.Test_My_Dashboard_Actions
+  class: MyDashboardActionsTest
+  tests:
 #    - test_edit_event_my_dashboard
 #    - test_email_icon
 #    - test_sms_icon
-#    - test_sorting_columns
+    - test_sorting_columns
 #    - test_searching_by_columns
 #
 ######################################## FILTERS TESTS ###############################################
@@ -44,11 +44,11 @@ tests_config:
 #    - test_check_email_popup
 #
 ##################################### CONVERT LEAD ##########################################
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
-  tests:
-    - test_perform_convert_lead   # Creates a lead and converts it to a client
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+#  directive: reload_configuration
+#  class: LeadModuleTest
+#  tests:
+#    - test_perform_convert_lead   # Creates a lead and converts it to a client
 #
 ##################################### CLIENTS ###############################################
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
@@ -76,10 +76,10 @@ tests_config:
 #    - test_searching_by_columns
 #    - test_sorting_columns
 #
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-  class: TradingAccountCrmTest
-  tests:
-    - test_crm_open_trading_account  # open a new trading account
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+#  class: TradingAccountCrmTest
+#  tests:
+#    - test_crm_open_trading_account  # open a new trading account
 #    - test_crm_open_live_mt5
 #    - test_crm_open_demo_mt5
 #
