--- a/src/main/python/ui/crm/model/BrandsXpath/forex_staging_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/forex_staging_xpath.yml
@@ -2,3 +2,7 @@ ClientsPage:
   country: "//*[@id='customAdvanceSearch']/td[5]/div/div[1]/button"
   country_input: "//*[@id='customAdvanceSearch']/td[5]/div/div[1]/ul/li[1]/div/input"
   mass_assign_btn: "//input[@value='Mass Assign']"
+FinancialTransactionsPage:
+  modified_time_element: "(//*[@id='listBody']//tr/td[14])[%s]"
+DocumentsPage:
+  apply_btn: "/html/body/div[20]/div[3]/div/button[1]"
