--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -186,16 +186,16 @@ tests_config:
 #    - test_add_auto_assign_rule_lead
 #    - test_add_auto_assign_rule_client
 #    - test_perform_delete_rule
-
+#
 ########################################## WORKFLOWS MODULE ##############################################
 - module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
   class: WorkflowsModulesTest
   tests:
     - test_create_workflows
-#    - test_check_workflow_by_status
-#    - test_check_workflow_by_country
+    - test_check_workflow_by_status
+    - test_check_workflow_by_country
     - test_delete_workflow
-
+#
 ############################################ USER MANAGEMENT ############################################
 #- module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
 #  class: UserManagementTest
