--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,7 +1,7 @@
 brands:
 
-#- name: kontofx
-#  config_file: kontofx.yml
+- name: kontofx
+  config_file: kontofx.yml
 
 - name: jonesmutual
   config_file: jonesmutual.yml
