--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -2,8 +2,8 @@ brands:
 
 #- name: royal_cfds
 #  config_file: royal_cfds.yml
-- name: jonesmutual
-  config_file: jonesmutual.yml
+#- name: jonesmutual
+#  config_file: jonesmutual.yml
 #- name: forexbestmarket
 #  config_file: forexbestmarket.yml
 #- name: newrichmarkets
@@ -79,12 +79,5 @@ brands:
 #  config_file: b-traderfx.yml
 #- name: newforexqa2
 #  config_file: newforexqa2.yml
-#
-#
-#
-#
-#
-#
-#
-#
-#
+- name: trade99
+  config_file: trade99.yml
