--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,8 +1,12 @@
 brands:
+
+- name: brokerxp
+  config_file: brokerxp.yml
+
 #- name: kayafx
 #  config_file: kaya_fx.yml
-- name: itrader
-  config_file: itrader.yml
+#- name: itrader
+#  config_file: itrader.yml
 #- name: stoxmarket
 #  config_file: stoxmarket.yml
 #- name: otcapital
