--- a/src/test/python/resources/config/tests10.yml
+++ b/src/test/python/resources/config/tests10.yml
@@ -11,6 +11,13 @@ tests_config:
   tests:
     - test_clients_mass_assign
 
+############################################ CONVERT LEAD ############################################
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+  directive: reload_configuration
+  class: LeadModuleTest
+  tests:
+    - test_perform_convert_lead   # Create lead and converts it to a client
+
 ############################################ MT4 ####################################################
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
   class: TradingAccountCrmTest
@@ -23,3 +30,8 @@ tests_config:
   tests:
     - test_change_client_password_from_crm  # change a client account password from the crm
     - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
+
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+  class: TradingAccountCrmTest
+  tests:
+    - test_crm_edit_trading_account  # edit trading account
