--- a/src/test/python/resources/config/tests6.yml
+++ b/src/test/python/resources/config/tests6.yml
@@ -1,5 +1,13 @@
 tests_config:
 
+########################################### TASKS CALENDAR VIEW #####################################
+- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
+  class: CalendarView
+  tests:
+    - test_check_day_tab
+    - test_check_month_tab
+    - test_check_week_tab
+
 ############################################ CONVERT LEAD ############################################
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
   directive: reload_configuration
@@ -24,10 +32,3 @@ tests_config:
     - test_mass_edit_tasks
     - test_searching_by_columns
     - test_sorting_columns
-
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
-  class: CalendarView
-  tests:
-    - test_check_day_tab
-    - test_check_month_tab
-    - test_check_week_tab
