--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -20,6 +20,7 @@ ClientProfilePage:
   credit_in_sum: "//*[@id='rld_table_content']/tbody/tr[2]/td[6]/span[1]"
   i_confirm_checkbox: "//*[@name='confirm']"
   choose_account_drop_down: "//*[@id='ClientDepositConfirmation']//button[@title='Choose trading account']"
+  choose_number: "//form[@id = 'ClientDepositConfirmation']//span[contains(text(), '%s')]"
 ClientsPage:
   id_client: "//a[contains(text(), 'ACC')]"
   country: "//*[@id='customAdvanceSearch']/td[6]/div/div[1]/button"
