--- a/src/test/python/resources/config/tests7.yml
+++ b/src/test/python/resources/config/tests7.yml
@@ -4,7 +4,7 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_affiliates_module.Test_Affiliates_Module
   class: AffiliateModule
   tests:
-    - test_create_affiliate
+    - test_create_delete_affiliate
 
 ############################################ FINANCIAL TRANSACTIONS #######################################
 - module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
