--- a/src/test/python/resources/config/tests5.yml
+++ b/src/test/python/resources/config/tests5.yml
@@ -4,7 +4,6 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
   class: TabLeadsModuleCRM
   tests:
-    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
     - sorting_lead_module
     - test_mass_assign_leads
     - test_mass_edit_leads
@@ -21,3 +20,8 @@ tests_config:
   class: LeadModuleTest
   tests:
     - test_edit_lead_pencil_icon
+
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
+  class: TabLeadsModuleCRM
+  tests:
+    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
