--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -83,10 +83,10 @@ tests_config:
 #    - test_clients_mass_assign
 #
 ############################################## TASKS ##################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
-#  class: AddInteraction
-#  tests:
-#    - test_add_interaction  # Adds an interaction for a client
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
+  class: AddInteraction
+  tests:
+    - test_add_interaction  # Adds an interaction for a client
 #    - test_interaction_search   # Searches for an interaction for a client. Validates that only one result is returned.
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
