--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -170,11 +170,11 @@ tests_config:
 #    - test_perform_delete_rule
 #
 ########################################### CHECK MODULES ################################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
-#  class: CheckModulesTest
-#  tests:
+- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Check_Modules
+  class: CheckModulesTest
+  tests:
 #    - test_my_dashboard_loading
-#    - test_audit_logs_loading
+    - test_audit_logs_loading
 #    - test_check_dashboard
 #    - test_check_leaderboard
 #    - test_check_user_management
@@ -185,12 +185,12 @@ tests_config:
 #    - test_crm_configurations_pages_loading
 #
 ######################################### WORKFLOWS MODULE #############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
-  class: WorkflowsModulesTest
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
+#  class: WorkflowsModulesTest
+#  tests:
 #    - test_create_workflows
-    - test_check_workflow_by_status
-    - test_check_workflow_by_country
+#    - test_check_workflow_by_status
+#    - test_check_workflow_by_country
 #    - test_delete_workflow
 #
 ########################################### USER_MANAGEMENT #########################################
