--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -6,8 +6,8 @@ brands:
 #- name: ptbanc
 #  config_file: ptbanc.yml
 #
-#- name: q8
-#  config_file: q8.yml
+- name: q8
+  config_file: q8.yml
 #
 #- name: kontofx
 #  config_file: kontofx.yml
@@ -15,8 +15,8 @@ brands:
 #- name: brokerz
 #  config_file: brokerz.yml
 #
-- name: gigafx
-  config_file: gigafx.yml
+#- name: gigafx
+#  config_file: gigafx.yml
 #
 #- name: trade99
 #  config_file: trade99.yml
