--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -14,6 +14,8 @@ tests_config:
   class: TradingAccountCrmTest
   tests:
     - test_crm_open_trading_account
+    - test_crm_open_live_mt5
+    - test_crm_open_demo_mt5
 
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
   class: DepositTestCRM
